examples/gitops-demo/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-web
  namespace: gitops-demo
  labels: { app: demo-web }
spec:
  replicas: 10
  selector:
    matchLabels: { app: demo-web }
  template:
    metadata:
      labels: { app: demo-web }
    spec:
      serviceAccountName: demo-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        fsGroup: 101
      containers:
        - name: web
          image: nginxinc/nginx-unprivileged:1.27-alpine
          ports:
            - { name: http, containerPort: 8080 }
          volumeMounts:
            - { name: html, mountPath: /usr/share/nginx/html, readOnly: true }
          readinessProbe:
            httpGet: { path: /, port: http }
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /, port: http }
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests: { cpu: "10m", memory: "32Mi" }
            limits: { cpu: "200m", memory: "128Mi" }
      volumes:
        - name: html
          configMap:
            name: demo-config
            items:
              - { key: index.html, path: index.html }
